# pykarambola

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: add-to-project.yml  ci.yml
benchmarks/: invariants_classification.py
benchmarks/results/: ALLEN_CELL_CELLPROFILER_ABLATION.md  ALLEN_CELL_CELLPROFILER_OPTIMIZED.md  ALLEN_CELL_EIGEN_COMBINATIONS_OPTIMIZED.md  ALLEN_CELL_OPTIMIZED.md  ALLEN_CELL_SO2_PRELIMINARY.md  ALLEN_CELL_SO2_PRELIMINARY_PLAN.md  ALLEN_CELL_SO2_PRELIMINARY_RBF.md  ALLEN_CELL_SO3D3_EIGEN_OPTIMIZED.md  ALLEN_CELL_SPHARM_SYSTEMATIC.md  BENCHMARK_SUMMARY.md  adrenal3d_invariants_scores.json
benchmarks/results/adrenal3d_64/: adrenal3d_64_invariants_hyperparams.json  adrenal3d_64_invariants_scores.json
benchmarks/results/allen_cell/: ALLEN_CELL_CELLPROFILER_ABLATION.md  ALLEN_CELL_EIGEN_BETA_ABLATION.md  ALLEN_CELL_INVARIANTS_SUMMARY.md  ALLEN_CELL_SPHARM_SYSTEMATIC.md
benchmarks/results/allen_cell_nuclei/: allen_cell_nuclei_invariants_hyperparams.json  allen_cell_nuclei_invariants_scores.json
benchmarks/results/allen_cell_nuclei_optimized/: allen_cell_nuclei_optimized_invariants_hyperparams.json  (+1 more)
examples/: minkowski_additivity.ipynb
paper/: manuscript.tex  references.bib
paper/notebooks/: benchmark_adrenal3d.ipynb
pykarambola/: __init__.py  api.py  invariants.py  spharm_invariants.py  triangulation.py
tests/: test_api.py  test_invariants.py  test_invariants_m1.py  test_invariants_m2.py  test_invariants_m5.py  test_invariants_m7.py  test_nonconvex.py  test_spharm_invariants.py
(+15 files in other folders)
